chapter7/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    tier: frontend
    app: nginx
  name: frontend
spec:
  containers:
  - image: nginx
    name: frontend
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
