chapter7/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name:  app-stack-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: todo
      tier: database
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tier: backend
              app: todo
      ports:
        - protocol: TCP
          port: 3306
